package seedu.forgetfulnus.model.tag;

public abstract class PredefinedTag {

    protected final String tagName;

    PredefinedTag(String tagName) {
        this.tagName = tagName;
    }

}
